// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hola
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Incrementar
  </button>
</div>
`;

exports[`ProductTitle debe mostrar el componente correctament 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hola
  </h1>
</div>
`;
